Fix background image stretching

--- a/app/assets/stylesheets/04_login.scss
+++ b/app/assets/stylesheets/04_login.scss
@@ -5,7 +5,7 @@
   height: 100vh;
   justify-content: center;
   background: image-url("discord_auth_background.jpg");
-  background: cover;
+  background-size: cover;
 }
 
 .login-logo {
